--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,22 +8,6 @@
     <TextView
         android:id="@+id/display_text_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="45sp" />
-
-    <TextView
-        android:id="@+id/display_text_view_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="45sp" />
-
-    <TextView
-        android:id="@+id/display_text_view_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="45sp" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
